--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
-    <title>Thijs Photography</title>
+    <title>Thijs</title>
     <link rel="icon" type="image/png" href="Photos/Website/Favicon.png">
 </head>
 <body>
