--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,16 @@
     <link rel="icon" type="image/png" href="Photos/Website/Favicon.png">
 </head>
 <body>
-  <div class="fullscreen-text"> Lthijs
+  .flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+<div class="flex-container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
+  <div>4</div>
+</div>
 </body>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
