--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,9 @@
     <title>Thijs</title>
     <link rel="icon" type="image/png" href="Photos/Website/Favicon.png">
 </head>
-<body>
+<header>
+Lthijs
+</header>
   .flex-container {
   display: flex;
   flex-wrap: wrap;
@@ -18,6 +20,8 @@
   <div>3</div>
   <div>4</div>
 </div>
-</body>
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+@media (max-width: 800px) {
+  .flex-container {
+    flex-direction: column;
+  }
