--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Styles.css">
     <title>Thijs</title>
     <link rel="icon" type="image/png" href="Photos/Website/Favicon.png">
 </head>
