--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@ Lthijs
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
+    <a target="_blank" href="Photos/Portfolio/20181225-DSC_0333.JPG">
       <img src="img_forest.jpg" alt="Forest" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
