--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@ Lthijs
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="Photos/Portfolio/20181225-DSC_0333.JPG">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+      <img src="Photos/Portfolio/20181225-DSC_0333.JPG" alt="Forest" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
