--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,8 @@ Lthijs
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_5terre.jpg">
-      <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+    <a target="_blank" href="Photos/Portfolio/20181225-DSC_0348.JPG">
+      <img src="Photos/Portfolio/20181225-DSC_0348.JPG" alt="Christmas Ornament" width="600" height="400">
     </a>
   </div>
 </div>
@@ -28,30 +28,186 @@ Lthijs
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="Photos/Portfolio/20181225-DSC_0333.JPG">
-      <img src="Photos/Portfolio/20181225-DSC_0333.JPG" alt="Forest" width="600" height="400">
+      <img src="Photos/Portfolio/20181225-DSC_0333.JPG" alt="Tree over the Water" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+    <a target="_blank" href="Photos/Portfolio/20181225-DSC_0648.JPG">
+      <img src="Photos/Portfolio/20181225-DSC_0648.JPG" alt="Dinner Table" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <a target="_blank" href="Photos/Portfolio/20190503-DSC_0078.JPG">
+      <img src="Photos/Portfolio/20190503-DSC_0078.JPG" alt="Trash in NYC" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
   </div>
 </div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Photos/Portfolio/20190504-DSC_0241.jpeg">
+      <img src="PPhotos/Portfolio/20190504-DSC_0241.jpeg" alt="Central Park Tree" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Photos/Portfolio/20190504-DSC_0283.jpeg">
+      <img src="Photos/Portfolio/20190504-DSC_0283.jpeg" alt="NYC Street" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Photos/Portfolio/20190703-DSC_0001.jpeg">
+      <img src="Photos/Portfolio/20190703-DSC_0001.jpeg" alt="Dutch bike path" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Photos/Portfolio/20190703-DSC_0025.jpeg">
+      <img src="Photos/Portfolio/20190703-DSC_0025.jpeg" alt="Dutch Cow" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Photos/Portfolio/20190703-DSC_0030.jpeg">
+      <img src="Photos/Portfolio/20190703-DSC_0030.jpeg" alt="Dutch Flowers" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Photos/Portfolio/20190703-DSC_0045.jpeg">
+      <img src="Photos/Portfolio/20190703-DSC_0045.jpeg" alt="Divet" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Link">
+      <img src="Link" alt="Name" width="600" height="400">
+    </a>
+  </div>
+</div>
 <div class="clearfix"></div>
 
 <div style="padding:6px;">
