--- a/Index.html
+++ b/Index.html
@@ -12,9 +12,7 @@ Lthijs
 </header>
  <body>
 
-<h2>Responsive Image Gallery</h2>
-
-<h4>Resize the browser window to see the effect.</h4>
+<h2>Portfolio</h2>
 
 <div class="responsive">
   <div class="gallery">
@@ -52,7 +50,7 @@ Lthijs
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="Photos/Portfolio/20190504-DSC_0241.jpeg">
-      <img src="PPhotos/Portfolio/20190504-DSC_0241.jpeg" alt="Central Park Tree" width="600" height="400">
+      <img src="Photos/Portfolio/20190504-DSC_0241.jpeg" alt="Central Park Tree" width="600" height="400">
     </a>
   </div>
 </div>
@@ -97,6 +95,8 @@ Lthijs
   </div>
 </div>
 
+     <h4>Nostalgia</h4>
+     
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="Link">
