--- a/Index.html
+++ b/Index.html
@@ -102,40 +102,40 @@ Lthijs
      
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Link">
-      <img src="Link" alt="Name" width="600" height="400">
+    <a target="_blank" href="Photos/Nostalgia/DSC_0013.JPG">
+      <img src="Photos/Nostalgia/DSC_0013.JPG" alt="Hawaii" width="600" height="400">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Link">
-      <img src="Link" alt="Name" width="600" height="400">
+    <a target="_blank" href="Photos/Nostalgia/DSC_0124.JPG">
+      <img src="Photos/Nostalgia/DSC_0124.JPG" alt="Plains" width="600" height="400">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Link">
-      <img src="Link" alt="Name" width="600" height="400">
+    <a target="_blank" href="Photos/Nostalgia/IMG_1296.JPG">
+      <img src="Photos/Nostalgia/IMG_1296.JPG" alt="Cross" width="600" height="400">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Link">
-      <img src="Link" alt="Name" width="600" height="400">
+    <a target="_blank" href="Photos/Nostalgia/DSCN2472.JPG">
+      <img src="Photos/Nostalgia/DSCN2472.JPG" alt="Trees" width="600" height="400">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Link">
-      <img src="Link" alt="Name" width="600" height="400">
+    <a target="_blank" href="Photos/Nostalgia/DSCN2473.JPG">
+      <img src="Photos/Nostalgia/DSCN2473.JPG" alt="Waterfall" width="600" height="400">
     </a>
   </div>
 </div>
